# InstituteSCE

./: main.py  pyproject.toml
app/controllers/: AddElementController.py  DataSetupController.py  InformationController.py  InformationWindow.py  QrGeneratorController.py  StartWindow.py
app/db/: UserModel.py  __init__.py  config.py  db.py  init_db.py  session.py
app/db/models/: Department.py  Details.py  Project.py  Status.py  Type.py  User.py
app/models/: ProjectsModel.py  StatusModel.py  TypesModel.py  UsersModel.py  __init__.py
app/views/: AddElement.py  AddElementInterface.py  DataSetup.py  EddElementInterface.py  Information.py  InformationInterface.py  MainIterface.py  QrGenerator.py  QrsGenerator.py  StartWindow.py
