[tool.poetry]
name = "institutesce"
version = "0.1.0"
description = ""
authors = ["VitaliyHome <vitaliy.go2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
